Updated the jupiter notebook with subquestions

--- a/Python project.ipynb
+++ b/Python project.ipynb
@@ -1,6 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Research questions\n",
+    "optie 1: To what extend is the way food is produced within Sub-Saharan africa related to hunger in sub-saharan africa and how will this trend develop until 2030? \n",
+    "\n",
+    "subquestions:\n",
+    "- What indicators strongly relate to zero hunger?\n",
+    "- How did those indicators developed in the last decades (for individual countries in subharan africa)?\n",
+    "\n",
+    "- What the differences in hunger between countries? \n",
+    "- What is causing these differences, is this related to the way food is produced?\n",
+    "\n",
+    "- How will the indicators regarding zero hunger goals develop until 2030 under the influence of certain policies?\n",
+    "\n",
+    "optie 2: What indicators strongly relate to the production of food in sub-sahara africa and and how will the overall trend in hunger in SS africa look like?\n",
+    "\n",
+    "## Opbouw report\n",
+    "Hoofdstuk 1: introductie probleem\n",
+    "- Inleiding no hunger goal 2030 van UN \n",
+    "- Introductie onderzoeksvragen\n",
+    "- Uitleggen methodologie\n",
+    "\n",
+    "Hoofdstuk 2: Data preperation\n",
+    "- Wat voor data is gebruikt?\n",
+    "- Hoe is die gecleaned/bewerkt om te gebruiken\n",
+    "\n",
+    "Hoofdstuk 3: uitwerken onderzoeksvragen\n",
+    "\n",
+    "- Uitwerken onderzoeksvraag aan de hand van analyseren data & graphs\n",
+    "- Schatten van toekomst met regressie analyse / trend analyses. Aan de hand van deze gegevens een schatting maken voor al deze veriabelen, maar vooral het effect op de ondervoeding/voedseltekort\n",
+    "\n",
+    "Hoofdstuk 4: aanbevelingen/conclusie\n",
+    "\n",
+    "\n",
+    "## PythonProjectQuarter1\n",
+    "\n",
+    "*Assignment*\n",
+    "Create a Jupyter Notebook that contains your explanations and analyses. Start the notebook with a\n",
+    "clear description of your research question and the type of analysis you are going to perform. The\n",
+    "conceptual contents of the Notebook should be roughly similar to a normal written report of 10-20\n",
+    "pages. Make your Notebook self-explanatory. So, it should contain text (with references) as well as\n",
+    "your actual analysis code and results. If you want to use other libraries for your analyses or\n",
+    "visualizations, feel free to do so. However, only use free available and well-known libraries. The ones\n",
+    "that come standard with Anaconda are fine. If you want to use something else, that you first need to\n",
+    "install, check with us first. Create a zip archive and upload it on Brightspace.\n",
+    "Some (minimum) properties of the Notebook and your analyses on which we will grade:\n",
+    "- Demonstrate your skills in Python by using typical Python constructs and using the appropriate\n",
+    "data structures (lists, dictionaries, tuples, arrays, dataframes, series, recursion, etc.)\n",
+    "- Try to think of reusability of your code. How easy would it be to use your same code if we\n",
+    "want to try to do a small variations of your analysis? Can we easily adapt/play around with\n",
+    "your code?\n",
+    "- How difficult were your analyses?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
