--- a/Python project.ipynb
+++ b/Python project.ipynb
@@ -131,7 +131,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hello "
+   ]
   },
   {
    "cell_type": "code",
@@ -201,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
