--- a/Python project.ipynb
+++ b/Python project.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Test"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,7 +41,7 @@
     "\n",
     "- Uitwerken onderzoeksvraag aan de hand van analyseren data & graphs\n",
     "- Schatten van toekomst met regressie analyse / trend analyses. Aan de hand van deze gegevens een schatting maken voor al deze veriabelen, maar vooral het effect op de ondervoeding/voedseltekort\n",
-    "\n",
+    "kjkjkj\n",
     "Hoofdstuk 4: aanbevelingen/conclusie\n",
     "\n",
     "\n",
