made a subset of only SSA data

--- a/Python project.ipynb
+++ b/Python project.ipynb
@@ -5,9 +5,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Test"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -87,6 +85,19 @@
     "\n",
     "\n",
     "plt.style.use('ggplot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#downlaod dfc from: https://raw.githubusercontent.com/lukes/ISO-3166-Countries-with-Regional-Codes/master/all/all.csv\n",
+    "dfc = pd.read_csv(\"data/countriescodes.txt\", sep = \",\", encoding = 'latin-1')\n",
+    "l = dfc[dfc['sub-region'] == \"Sub-Saharan Africa\"][\"alpha-3\"]\n",
+    "WDI = pd.read_csv(\"data/WDIData.csv\")\n",
+    "WDI_SSA = WDI[WDI[\"Country Code\"].isin(l)]"
    ]
   },
   {
@@ -212,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
