--- a/Undernourishment in sub-saharan Africa.ipynb
+++ b/Undernourishment in sub-saharan Africa.ipynb
@@ -11,8 +11,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.io.shapereader as shpreader\n",
     "import itertools\n",
     "import plotly.plotly as py\n",
     "import os\n",
@@ -28,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/Martijn/Documents/Rdownloads'"
+       "'/Users/Martijn/Documents/GitHub/data'"
       ]
      },
      "execution_count": 2,
@@ -37,13 +35,13 @@
     }
    ],
    "source": [
-    "os.chdir('/Users/Martijn/Documents/Rdownloads')\n",
+    "os.chdir('/Users/Martijn/Documents/Github/data')\n",
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_wdi = pd.read_csv(\"WDIData.csv\")\n",
+    "df_wdi = pd.read_csv(\"WDI/WDIData.csv\")\n",
     "#We only want the indicator with the % of undernourishment\n",
     "df_wdi = df_wdi[df_wdi[\"Indicator Code\"] == 'SN.ITK.DEFC.ZS']\n",
     "# Set the years from colums to rows\n",
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -111,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#create right dataset for Cereal Yield\n",
-    "df_wdi2 = pd.read_csv(\"WDIData.csv\")\n",
+    "df_wdi2 = pd.read_csv(\"WDI/WDIData.csv\")\n",
     "#We only want the indicator with Cereal Yield\n",
     "df_wdi2 = df_wdi2[df_wdi2[\"Indicator Code\"] == 'AG.YLD.CREL.KG']\n",
     "# Set the years from colums to rows\n",
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -178,7 +176,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
