updated working directory

--- a/Undernourishment in sub-saharan Africa.ipynb
+++ b/Undernourishment in sub-saharan Africa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "'/Users/Martijn/Documents/GitHub/PythonProjectQuarter1'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,36 +51,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#country names un Sub-Saharan Africa\n",
-    "#'Sub-Saharan Africa',\n",
-    " #'Sub-Saharan Africa (excluding high income)',\n",
-    " #'Sub-Saharan Africa (IDA & IBRD countries)'\n",
-    "#SN.ITK.DEFC.ZS <- indicator code undernourishment"
+    "#reading in the data\n",
+    "df_code = pd.read_csv(\"countriescodes.csv\", sep = \",\", encoding = 'latin-1')\n",
+    "df_wdi = pd.read_csv(\"WDI/WDIData.csv\")\n",
+    "\n",
+    "#creating a dataframe with only countries in Sub-Saharan Africa, the region Sub-Saharan Africa and the World.\n",
+    "df_code = df_code[df_code['sub-region'] == \"Sub-Saharan Africa\"][\"alpha-3\"]\n",
+    "region = pd.Series([\"SSF\",\"WLD\"]) \n",
+    "df_code = df_code.append(region)\n",
+    "df_wdi = df_wdi[df_wdi[\"Country Code\"].isin(df_code)]\n",
+    "\n",
+    "# Set the years from colums to rows\n",
+    "df = pd.melt(df_wdi,id_vars =[\"Country Name\",\"Country Code\",\"Indicator Name\",\"Indicator Code\"],\n",
+    "          var_name = \"Years\")\n",
+    "# Sort the values first by Country Name and then by Years\n",
+    "df = df.sort_values([\"Country Name\", \"Years\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_wdi = pd.read_csv(\"WDI/WDIData.csv\")\n",
-    "#We only want the indicator with the % of undernourishment\n",
-    "df_wdi = df_wdi[df_wdi[\"Indicator Code\"] == 'SN.ITK.DEFC.ZS']\n",
-    "# Set the years from colums to rows\n",
-    "df_wdi = pd.melt(df_wdi,id_vars =[\"Country Name\",\"Country Code\",\"Indicator Name\",\"Indicator Code\"],\n",
-    "          var_name = \"Years\", value_name = \"perc. undernourishment\")\n",
-    "# Sort the values first by Country Name and than by Years\n",
-    "df_wdi = df_wdi.sort_values([\"Country Name\", \"Years\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -92,29 +86,18 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = df_wdi[df_wdi[\"Country Name\"] == 'World'][\"Years\"].dropna()\n",
-    "y1 = df_wdi[df_wdi[\"Country Name\"] == 'World'][\"perc. undernourishment\"].dropna()\n",
-    "y2 = df_wdi[df_wdi[\"Country Name\"] == 'Sub-Saharan Africa'][\"perc. undernourishment\"].dropna()\n",
-    "y3 = df_wdi[df_wdi[\"Country Name\"] == 'Central Europe and the Baltics'][\"perc. undernourishment\"].dropna()\n",
-    "y4 = df_wdi[df_wdi[\"Country Name\"] == 'East Asia & Pacific'][\"perc. undernourishment\"].dropna()\n",
+    "df_und = df[df[\"Indicator Code\"] == 'SN.ITK.DEFC.ZS']\n",
+    "df_und = df_und.dropna()\n",
+    "x = df_und[df_und[\"Country Name\"] == 'World'][\"Years\"]\n",
+    "y1 = df_und[df_und[\"Country Name\"] == 'World'][\"value\"]\n",
+    "y2 = df_und[df_und[\"Country Name\"] == 'Sub-Saharan Africa'][\"value\"]\n",
     "\n",
-    "#plt.plot(x,y1, color = \"Blue\",label = \"World\")\n",
-    "#plt.plot(x,y2, color = \"Red\",label = \"Sub-Saharan Africa\")\n",
-    "#plt.plot(x,y3, color = \"Green\",label = \"Central Europe and the Baltics\")\n",
-    "#plt.plot(x,y4, color = \"Yellow\",label = \"East Asia & Pacific\")\n",
-    "#plt.xlabel(\"Years\")\n",
-    "#plt.ylabel(\"% of undernourishment\")\n",
-    "\n",
-    "#plt.legend(loc=((1.05,0.72)))\n",
-    "#plt.show()\n",
-    "\n",
-    "# Create traces\n",
     "trace0 = go.Scatter(\n",
     "    x = x,\n",
     "    y = y1,\n",
@@ -127,21 +110,8 @@
     "    mode = \"lines + markers\",\n",
     "    name = \"Sub-Saharan Africa\"\n",
     ")\n",
-    "trace2 = go.Scatter(\n",
-    "    x = x,\n",
-    "    y = y3,\n",
-    "    mode = \"lines + markers\",\n",
-    "    name = \"Central Europe and the Baltics\"\n",
-    ")\n",
-    "trace3 = go.Scatter(\n",
-    "    x = x,\n",
-    "    y = y4,\n",
-    "    mode = \"lines + markers\",\n",
-    "    name = \"East Asia & Pacific\"\n",
-    ")\n",
     "\n",
-    "\n",
-    "data = [trace0,trace1,trace2,trace3]\n",
+    "data = [trace0,trace1]\n",
     "\n",
     "layout = dict(title = 'Undernourishment in different areas around the world',\n",
     "              xaxis = dict(title = 'Years'),\n",
@@ -149,29 +119,12 @@
     "              )\n",
     "\n",
     "fig = dict(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='line-mode')\n"
+    "py.iplot(fig, filename='line-mode')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create right dataset for Cereal Yield\n",
-    "df_wdi2 = pd.read_csv(\"WDI/WDIData.csv\")\n",
-    "#We only want the indicator with Cereal Yield\n",
-    "df_wdi2 = df_wdi2[df_wdi2[\"Indicator Code\"] == 'AG.YLD.CREL.KG']\n",
-    "# Set the years from colums to rows\n",
-    "df_wdi2 = pd.melt(df_wdi2,id_vars =[\"Country Name\",\"Country Code\",\"Indicator Name\",\"Indicator Code\"],\n",
-    "              var_name = \"Years\", value_name = \"Cereal Yield (kg per Hectare)\")\n",
-    "# Sort the values first by Country Name and than by Years\n",
-    "df_wdi2 = df_wdi2.sort_values([\"Country Name\",\"Years\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,29 +136,18 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = df_wdi2[df_wdi2[\"Country Name\"] == 'World'][\"Years\"].dropna()\n",
-    "y1 = df_wdi2[df_wdi2[\"Country Name\"] == 'World'][\"Cereal Yield (kg per Hectare)\"].dropna()\n",
-    "y2 = df_wdi2[df_wdi2[\"Country Name\"] == 'Sub-Saharan Africa'][\"Cereal Yield (kg per Hectare)\"].dropna()\n",
-    "y3 = df_wdi2[df_wdi2[\"Country Name\"] == 'Central Europe and the Baltics'][\"Cereal Yield (kg per Hectare)\"].dropna()\n",
-    "y4 = df_wdi2[df_wdi2[\"Country Name\"] == 'East Asia & Pacific'][\"Cereal Yield (kg per Hectare)\"].dropna()\n",
+    "df_cer = df[df[\"Indicator Code\"] == 'AG.YLD.CREL.KG']\n",
+    "df_cer = df_cer.dropna()\n",
+    "x = df_cer[df_cer[\"Country Name\"] == 'World'][\"Years\"]\n",
+    "y1 = df_cer[df_cer[\"Country Name\"] == 'World'][\"value\"]\n",
+    "y2 = df_cer[df_cer[\"Country Name\"] == 'Sub-Saharan Africa'][\"value\"]\n",
     "\n",
-    "#plt.plot(x,y1, color = \"Blue\",label = \"World\")\n",
-    "#plt.plot(x,y2, color = \"Red\",label = \"Sub-Saharan Africa\")\n",
-    "#plt.plot(x,y3, color = \"Green\",label = \"Central Europe and the Baltics\")\n",
-    "#plt.plot(x,y4, color = \"Yellow\",label = \"East Asia & Pacific\")\n",
-    "#plt.xlabel(\"Years\")\n",
-    "#plt.ylabel(\"Cereal Yield (kg per Hectare)\")\n",
-    "\n",
-    "#plt.legend(loc=((1.05,0.72)))\n",
-    "#plt.show()\n",
-    "\n",
-    "# Create traces\n",
     "trace0 = go.Scatter(\n",
     "    x = x,\n",
     "    y = y1,\n",
@@ -218,21 +160,8 @@
     "    mode = \"lines + markers\",\n",
     "    name = \"Sub-Saharan Africa\"\n",
     ")\n",
-    "trace2 = go.Scatter(\n",
-    "    x = x,\n",
-    "    y = y3,\n",
-    "    mode = \"lines + markers\",\n",
-    "    name = \"Central Europe and the Baltics\"\n",
-    ")\n",
-    "trace3 = go.Scatter(\n",
-    "    x = x,\n",
-    "    y = y4,\n",
-    "    mode = \"lines + markers\",\n",
-    "    name = \"East Asia & Pacific\"\n",
-    ")\n",
     "\n",
-    "\n",
-    "data = [trace0,trace1,trace2,trace3]\n",
+    "data = [trace0,trace1]\n",
     "\n",
     "layout = dict(title = \"Cereal Yield in different areas around the world\",\n",
     "              xaxis = dict(title = 'Years'),\n",
@@ -245,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -259,30 +188,28 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfc = pd.read_csv(\"countriescodes.csv\", sep = \",\", encoding = 'latin-1')\n",
-    "dfc = dfc[dfc['sub-region'] == \"Sub-Saharan Africa\"][\"alpha-3\"]\n",
-    "df = df_wdi[df_wdi[\"Country Code\"].isin(dfc)]\n",
-    "df = df[df[\"Years\"] == \"2015\"]\n",
+    "df_map = df[df[\"Indicator Code\"] == 'SN.ITK.DEFC.ZS']\n",
+    "df_map = df_map[df_map[\"Years\"] == \"2016\"]\n",
     "\n",
     "scl = [[0.0, 'rgb(255,127,80)'],[0.2, 'rgb(255,99,71)'],[0.4, 'rgb(255,0,0)'],\\\n",
     "            [0.6, 'rgb(220,20,60)'],[1, 'rgb(178,34,34)']]\n",
     "\n",
-    "df['text'] = df['Country Name']\n",
+    "df_map['text'] = df_map['Country Name']\n",
     "\n",
     "data = [ dict(\n",
     "        type='choropleth',\n",
     "        colorscale = scl,\n",
     "        autocolorscale = False,\n",
-    "        locations = df['Country Code'],\n",
-    "        z = df['perc. undernourishment'],\n",
+    "        locations = df_map['Country Code'],\n",
+    "        z = df_map['value'],\n",
     "        locationmode = 'ISO-3',\n",
-    "        text = df['text'],\n",
+    "        text = df_map['text'],\n",
     "        marker = dict(\n",
     "            line = dict (\n",
     "                color = 'rgb(255,255,255)',\n",
@@ -305,13 +232,6 @@
     "fig = dict( data=data, layout=layout )\n",
     "py.iplot( fig, filename='d3-cloropleth-map' )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
