y-axes set at zero

--- a/Undernourishment in sub-saharan Africa.ipynb
+++ b/Undernourishment in sub-saharan Africa.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,9 +113,10 @@
     "\n",
     "data = [trace0,trace1]\n",
     "\n",
-    "layout = dict(title = 'Undernourishment in different areas around the world',\n",
+    "layout = dict(title = 'Undernourishment in Sub-Saharan Africa vs. the World',\n",
     "              xaxis = dict(title = 'Years'),\n",
-    "              yaxis = dict(title = '% Undernourishment'),\n",
+    "              yaxis = dict(title = '% Undernourishment',\n",
+    "                          range = [0,30]),\n",
     "              )\n",
     "\n",
     "fig = dict(data=data, layout=layout)\n",
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +137,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,9 +164,10 @@
     "\n",
     "data = [trace0,trace1]\n",
     "\n",
-    "layout = dict(title = \"Cereal Yield in different areas around the world\",\n",
+    "layout = dict(title = \"Cereal Yield in Sub-Saharan Afriva vs. the World\",\n",
     "              xaxis = dict(title = 'Years'),\n",
-    "              yaxis = dict(title = \"Cereal Yield (kg per Hectare)\"),\n",
+    "              yaxis = dict(title = \"Cereal Yield (kg per Hectare)\",\n",
+    "                          range = [0,4500]),\n",
     "              )\n",
     "\n",
     "fig = dict(data=data, layout=layout)\n",
