--- a/Undernourishment in sub-saharan Africa.ipynb
+++ b/Undernourishment in sub-saharan Africa.ipynb
@@ -74,44 +74,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_plot(indicator_code):\n",
+    "    df_und = df[df[\"Indicator Code\"] == indicator_code]\n",
+    "    df_und = df_und.dropna()\n",
+    "    x = df_und[df_und[\"Country Name\"] == 'World'][\"Years\"]\n",
+    "    y1 = df_und[df_und[\"Country Name\"] == 'World'][\"value\"]\n",
+    "    y2 = df_und[df_und[\"Country Name\"] == 'Sub-Saharan Africa'][\"value\"]\n",
+    "\n",
+    "    trace0 = go.Scatter(\n",
+    "        x = x,\n",
+    "        y = y1,\n",
+    "        mode = \"lines + markers\",\n",
+    "        name = \"World\"\n",
+    "        )\n",
+    "    trace1 = go.Scatter(\n",
+    "        x = x,\n",
+    "        y = y2,\n",
+    "        mode = \"lines + markers\",\n",
+    "        name = \"Sub-Saharan Africa\"\n",
+    "    )\n",
+    "\n",
+    "    data = [trace0,trace1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~martijnvanvlie/10.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-648be87294ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m               )\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'line-mode'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
-    "df_und = df[df[\"Indicator Code\"] == 'SN.ITK.DEFC.ZS']\n",
-    "df_und = df_und.dropna()\n",
-    "x = df_und[df_und[\"Country Name\"] == 'World'][\"Years\"]\n",
-    "y1 = df_und[df_und[\"Country Name\"] == 'World'][\"value\"]\n",
-    "y2 = df_und[df_und[\"Country Name\"] == 'Sub-Saharan Africa'][\"value\"]\n",
-    "\n",
-    "trace0 = go.Scatter(\n",
-    "    x = x,\n",
-    "    y = y1,\n",
-    "    mode = \"lines + markers\",\n",
-    "    name = \"World\"\n",
-    ")\n",
-    "trace1 = go.Scatter(\n",
-    "    x = x,\n",
-    "    y = y2,\n",
-    "    mode = \"lines + markers\",\n",
-    "    name = \"Sub-Saharan Africa\"\n",
-    ")\n",
-    "\n",
-    "data = [trace0,trace1]\n",
+    "data_plot('SN.ITK.DEFC.ZS')\n",
     "\n",
     "layout = dict(title = 'Undernourishment in Sub-Saharan Africa vs. the World',\n",
     "              xaxis = dict(title = 'Years'),\n",
@@ -125,44 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~martijnvanvlie/10.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-92d2c14f61fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m               )\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'line-mode'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
-    "df_cer = df[df[\"Indicator Code\"] == 'AG.YLD.CREL.KG']\n",
-    "df_cer = df_cer.dropna()\n",
-    "x = df_cer[df_cer[\"Country Name\"] == 'World'][\"Years\"]\n",
-    "y1 = df_cer[df_cer[\"Country Name\"] == 'World'][\"value\"]\n",
-    "y2 = df_cer[df_cer[\"Country Name\"] == 'Sub-Saharan Africa'][\"value\"]\n",
-    "\n",
-    "trace0 = go.Scatter(\n",
-    "    x = x,\n",
-    "    y = y1,\n",
-    "    mode = \"lines + markers\",\n",
-    "    name = \"World\"\n",
-    ")\n",
-    "trace1 = go.Scatter(\n",
-    "    x = x,\n",
-    "    y = y2,\n",
-    "    mode = \"lines + markers\",\n",
-    "    name = \"Sub-Saharan Africa\"\n",
-    ")\n",
-    "\n",
-    "data = [trace0,trace1]\n",
+    "data_plot('AG.YLD.CREL.KG')\n",
     "\n",
     "layout = dict(title = \"Cereal Yield in Sub-Saharan Afriva vs. the World\",\n",
     "              xaxis = dict(title = 'Years'),\n",
