--- a/Undernourishment in sub-saharan Africa.ipynb
+++ b/Undernourishment in sub-saharan Africa.ipynb
@@ -74,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def data_plot(indicator_code):\n",
+    "def data_plot(indicator_code,title,ytitle,yrange):\n",
     "    df_und = df[df[\"Indicator Code\"] == indicator_code]\n",
     "    df_und = df_und.dropna()\n",
     "    x = df_und[df_und[\"Country Name\"] == 'World'][\"Years\"]\n",
@@ -98,67 +98,69 @@
     "        name = \"Sub-Saharan Africa\"\n",
     "    )\n",
     "\n",
-    "    data = [trace0,trace1]"
+    "    data = [trace0,trace1]\n",
+    "    \n",
+    "    layout = dict(title = title,\n",
+    "              xaxis = dict(title = 'Years'),\n",
+    "              yaxis = dict(title = ytitle,\n",
+    "                          range = [0,yrange]),\n",
+    "              )\n",
+    "\n",
+    "    fig = dict(data=data, layout=layout)\n",
+    "    plot = py.iplot(fig, filename='line-mode')\n",
+    "    return plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-648be87294ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m               )\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'line-mode'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~martijnvanvlie/10.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_plot('SN.ITK.DEFC.ZS')\n",
-    "\n",
-    "layout = dict(title = 'Undernourishment in Sub-Saharan Africa vs. the World',\n",
-    "              xaxis = dict(title = 'Years'),\n",
-    "              yaxis = dict(title = '% Undernourishment',\n",
-    "                          range = [0,30]),\n",
-    "              )\n",
-    "\n",
-    "fig = dict(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='line-mode')"
+    "data_plot(indicator_code ='SN.ITK.DEFC.ZS',\n",
+    "          title = 'Undernourishment in Sub-Saharan Africa vs. the World',\n",
+    "          ytitle = '% Undernourishment',\n",
+    "          yrange = 30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-92d2c14f61fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m               )\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'line-mode'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~martijnvanvlie/10.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_plot('AG.YLD.CREL.KG')\n",
-    "\n",
-    "layout = dict(title = \"Cereal Yield in Sub-Saharan Afriva vs. the World\",\n",
-    "              xaxis = dict(title = 'Years'),\n",
-    "              yaxis = dict(title = \"Cereal Yield (kg per Hectare)\",\n",
-    "                          range = [0,4500]),\n",
-    "              )\n",
-    "\n",
-    "fig = dict(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='line-mode')"
+    "data_plot(indicator_code = 'AG.YLD.CREL.KG',\n",
+    "          title = 'Cereal Yield in Sub-Saharan Africa vs. the World',\n",
+    "          ytitle = 'Cereal Yield (kg per hectare)',\n",
+    "          yrange = 4500)"
    ]
   },
   {
