added barchart for exposure

--- a/Python report document.ipynb
+++ b/Python report document.ipynb
@@ -718,7 +718,9 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1343,10 +1345,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~borsnamgerd/8.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [go.Bar(\n",
+    "            x=[\"low extreme\",\"high extreme\"],\n",
+    "            y=[135874820, 593711026],\n",
+    "            name='Absolute'),\n",
+    "        go.Scatter(\n",
+    "            x=[\"low extreme\",\"high extreme\"],\n",
+    "            y=[14.05,16.78],\n",
+    "            name='Percentage',\n",
+    "            mode = \"markers\",\n",
+    "            marker=dict(line=dict(color='rgb(255, 127, 14)', width=10)),\n",
+    "            yaxis = 'y2')]\n",
+    "layout = go.Layout(\n",
+    "            title='Higher number of undernourished people in countries with climate extremes',\n",
+    "            yaxis=dict(title= 'Absolute', range = [0,700000000], titlefont= dict(color='rgb(31, 119, 180)'),tickfont=dict(color='rgb(31, 119, 180)'),),\n",
+    "            yaxis2=dict(title='Percentage', showgrid=False, range = [13,16.9], titlefont= dict(color='rgb(255, 127, 14)'),\n",
+    "            tickfont=dict(color='rgb(255, 127, 14)'), \n",
+    "            overlaying='y',\n",
+    "            anchor='free',\n",
+    "            side='right',\n",
+    "            position=1)\n",
+    "            )\n",
+    "fig = dict(data=data, layout=layout)\n",
+    "py.iplot(fig, filename='zero-hunger-indicators')"
+   ]
   },
   {
    "cell_type": "code",
