--- a/Barchart voorbereidende code.ipynb
+++ b/Barchart voorbereidende code.ipynb
@@ -878,9 +878,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dummy\n",
+       "0    1.461052e+08\n",
+       "1    6.144157e+08\n",
+       "Name: abs population undernourist, dtype: float64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#add population info to calculate total undernourished population \n",
     "dfpop = pd.read_csv(\"population_conv.csv\",sep = ',')\n",
@@ -893,32 +907,14 @@
     "#combine dataframes\n",
     "df_total_2015 = pd.merge(dfpop,dfu2015,right_on = 'iso', left_on = 'iso')\n",
     "df_total_2015 = df_total_2015[[\"iso\",\"population\",\"dummy\",\"Country Name\",\"value\"]]\n",
-    "df_total_2015 = df_total_2015.rename({'value':'PoU'}, axis=1)\n",
-    "#calculate barchart values for total absolute population and PoU for countries with high & low exposure to climate extremes\n",
-    "df_total_2015[\"abs population undernourist\"] = df_total_2015.population * (df_total_2015.PoU/100)\n",
-    "absolute_undernourishment = df_total_2015.groupby(\"dummy\")[\"abs population undernourist\"].sum()\n",
-    "average_undernourishment =  (dfu2015.groupby([\"dummy\"])[\"value\"].sum())/ (dfu2015.groupby([\"dummy\"])[\"value\"].count())"
+    "df_total_2015 = df_total_2015.rename({'value':'PoU'}, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dummy\n",
-       "0    1.461052e+08\n",
-       "1    6.144157e+08\n",
-       "Name: abs population undernourist, dtype: float64"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#combine undernourishment & population dataframe for low & middle income countries\n",
     "dfpopfu2015 = pd.merge(dfpop,dfu2015,right_on = 'iso', left_on = 'iso')\n",
@@ -926,9 +922,13 @@
     "dfpopfu2015 = dfpopfu2015.rename({'value':'PoU'}, axis=1)\n",
     "#calculate new column for total undernurist population \n",
     "dfpopfu2015[\"abs population undernourist\"] = dfpopfu2015.population * (dfpopfu2015.PoU/100)\n",
-    "#calculate barchart values for absolute undernourishment \n",
-    "x1 = dfpopfu2015.groupby(\"dummy\")[\"abs population undernourist\"].sum()\n",
-    "x1"
+    "\n",
+    "#calculate barchart values for total absolute population and PoU for countries with high & low exposure to climate extremes\n",
+    "df_total_2015[\"abs population undernourist\"] = df_total_2015.population * (df_total_2015.PoU/100)\n",
+    "absolute_undernourishment = df_total_2015.groupby(\"dummy\")[\"abs population undernourist\"].sum()\n",
+    "average_undernourishment =  (dfu2015.groupby([\"dummy\"])[\"value\"].sum())/ (dfu2015.groupby([\"dummy\"])[\"value\"].count())\n",
+    "\n",
+    "#PLOT BARCHART HERE"
    ]
   },
   {
