--- a/Python report document-version 1.1.ipynb
+++ b/Python report document-version 1.1.ipynb
@@ -107,9 +107,8 @@
     "<h2 align='left' style='margin-bottom: 0px'>Table of contents</h2>\n",
     "\n",
     "#### [1  Introduction to food security in Sub-Saharan Africa](#first-chapter)\n",
-    "- [1.1 UN Targets](#UN_Targets)  \n",
-    "- [1.2 Recent developments](#dev) \n",
-    "- [1.3 Sub Saharan Africa](#SSA)\n",
+    "- [1.1 Recent developments](#dev) \n",
+    "- [1.2 Sub Saharan Africa](#SSA)\n",
     "\n",
     "#### [2  Methodology & research goal](#second-chapter)\n",
     "- [2.1 Methodology](#methodology)  \n",
@@ -144,7 +143,7 @@
     "The negative effects of hunger are enourmous. Malnutrition and related effects slow down development within whole countries. Hunger has a ripple effect that slow down and freezes development. Especially for children, the effects of malnutrition can last a lifetime. Poor nutrition affects physical and mental development which can have a tremendous negative effect on the development of individuals and hereby the economic output of a country [5].\n",
     "\n",
     "<h3 align='left' style='margin-bottom: 0px'>1.1 Recent developments <a class=\"anchor\" id=\"dev\"></a> </h3>\n",
-    "Since 1990, the prevalence of hunger has fallen across most regions. Globally, hunger has fallen from 14.7 percent in 2000 to 10.9 percent in 2017. But the progress has not been consistent for the whole period. Global hunger reached its lowest levels in 2015 but has now risen to 10.8 and 10.9 percent in 2016 and 2017 [4]. This increase in hunger levels are largely a result of increases in Sub-Saharan Africa and minor increases in South America [5]. Also, the UN FAO linked the increase of PoU to the rise in conflicts which often leads to famine, and climate factors such as the El Niño phenomenon and climate change which could be the cause of more climate related hazards [6]. "
+    "Since 1990, the prevalence of hunger has fallen across most regions. Globally, hunger has fallen from 14.8 percent in 2000 to 10.7 percent in 2017. But the progress has not been consistent for the whole period. Global hunger reached its lowest levels in 2015 but has now risen to 10.8 and 10.9 percent in 2016 and 2017, see figure 1 [4]. This increase in hunger levels are largely a result of increases in Sub-Saharan Africa and minor increases in South America [5]. Also, the UN FAO has linked the increase of PoU to the rise in conflicts which often leads to famine, and climate factors such as the heavy occurrence of the last El Niño phenomenon. Another import factor could be the higher perceived occurrence  of climate extremes which can have detremental effects on the output of agriculture and its assets [6]. "
    ]
   },
   {
@@ -188,7 +187,9 @@
    "metadata": {},
    "source": [
     "<h3 align='left' style='margin-bottom: 0px'>1.2 Sub Saharan Africa <a class=\"anchor\" id=\"SSA\"></a> </h3>\n",
-    "Chronic undernourishment is widespread throughout the region of Africa, see figure X. Almost X percent of the population of Sub Saharan Africa are undernourished. The region remain exposed to food crises and famines triggered by droughts, floods, pest, economic downturns and conflicts. Sub-Saharan Africa is the only region of the world, where it is expected that the state of hunger will worsen over the coming decades [7]."
+    "Chronic undernourishment is widespread throughout the region of Africa, see figure 2. As can be seen in figure 1, 20.1 percent of the population of Sub Saharan Africa is now undernourished, which corresponds to around 250 million people in Africa. The region remain exposed to food crises and famines triggered by droughts, floods, pest, economic downturns and conflicts [5]. \n",
+    "\n",
+    "Futhermore the population of the SSA region is rapidly expanding, namely 670 million in 2000 and 1.06 billion in 2015, see figure 6. This rapid increase in population combined with the effects of climate change form a dangerous mix of factors. Therefore, Sub-Saharan Africa is the only region of the world, where it is expected that the state of hunger will worsen over the coming decades [7]. \n"
    ]
   },
   {
@@ -380,7 +381,9 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1145,7 +1148,8 @@
    "source": [
     "<h3 align='left' style='margin-bottom: 0px'>4.1 State of hunger in Sub-Saharan Africa   <a class=\"question1\" id=\"41\"></a> </h3>\n",
     "\n",
-    "As can be derived from the first two graphs presented in chapter 1, the prevelance of undernourishment in Sub Saharan Africa is rising for two consecutive years now. The situation is mainly worsening in liberia, central africa republic, zambia, zimbabwe and madagascar who all have PoU bigger dan 40%. For the SSA region as a whole food scarcity is affecting almost 21 percent of the population (more than 250 million people). Without increased efforts, the world will fall far short of achieving the SDG target of eradicating hunger by 2030."
+    "As can be derived from the first two graphs presented in chapter 1, the prevelance of undernourishment in Sub Saharan Africa is rising for two consecutive years. The situation is mainly getting worse in Liberia, the Central Africa Republic, Zambia, Zimbabwe and Madagascar, which all have a PoU higher dan 40%. For the SSA region as a whole food scarcity is affecting almost 21 percent of the population (more than 250 million people). Without increased efforts, the world will fall far short of achieving the SDG target of eradicating hunger by 2030.\n",
+    "\n"
    ]
   },
   {
@@ -1883,7 +1887,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 align='left' style='margin-bottom: 0px'>5 Policy recommendation  <a class=\"chapter-5\" id=\"EMD\"></a> </h3>\n",
+    "<h2 align='left' style='margin-bottom: 0px'>Chapter 5 Policy recommendation  <a class=\"question1\" id=\"fourth-chapter\"> </h2>\n",
     "\n",
     "Answer the research question and give brief policy recommendation maybe use FAO paper \n"
    ]
@@ -1894,19 +1898,28 @@
    "source": [
     "<h2 align='left' style='margin-bottom: 0px'>6 References <a class=\"anchor\" id=\"ref\"></a> </h2>\n",
     "\n",
-    "[1] https://www.un.org/sustainabledevelopment/hunger/\n",
+    "**[1] UN (n.d.) Goal 2: Zero Hunger**\n",
     "\n",
-    "[2] https://sustainabledevelopment.un.org/?menu=1300\n",
+    "URL: https://www.un.org/sustainabledevelopment/hunger/\n",
     "\n",
-    "[3] http://www.fao.org/state-of-food-security-nutrition/en/\n",
+    "**[2] UN (n.d.) Sustainable Development Goals**\n",
     "\n",
-    "[4] https://ourworldindata.org/hunger-and-undernourishment\n",
+    "URL: https://sustainabledevelopment.un.org/?menu=1300\n",
     "\n",
-    "[5] FAO, IFAD, UNICEF, WFP and WHO. 2017. The State of Food Security and Nutrition in the World 2017. Building resilience for peace and food security. Rome, FAO. Available online.\n",
+    "**[3] FAO (n.d.). The state of food security and nutrition**\n",
+    "URL: http://www.fao.org/state-of-food-security-nutrition/en/\n",
     "\n",
-    "[6] FAO, IFAD, UNICEF, WFP and WHO. 2018. The State of Food Security and Nutrition in the World 2018. Building climate resilience for food security and nutrition. Rome, FAO. Available online.\n",
+    "**[4] Our world in data. (2017). Hunger and Undernourishment**\n",
+    "URL: https://ourworldindata.org/hunger-and-undernourishment\n",
+    "**[5] FAO. (2017). The State of Food Security and Nutrition in the World 2017. Building resilience for peace and food security.** \n",
     "\n",
-    "[7] FAO Food Security and Agricultural Development in Sub Saharan Africa - Building a case for more public support Policy Brief No. 1"
+    "**[6] FAO. (2018). The State of Food Security and Nutrition in the World 2018. Building climate resilience for food security and nutrition**\n",
+    "\n",
+    "**[7] FAO. (2017). Food Security and Agricultural Development in Sub Saharan Africa - Building a case for more public support Policy Brief No. 1**\n",
+    "\n",
+    "**[8] PYData.org (n.d.) Using seaborn.regplot**\n",
+    "\n",
+    "URL: https://seaborn.pydata.org/generated/seaborn.regplot.html"
    ]
   },
   {
